--- a/index.html
+++ b/index.html
@@ -1545,223 +1545,239 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-blue-100 text-white py-10 relative">
-      <!-- Background Image -->
-      <div
-        class="absolute inset-0 bg-cover bg-center opacity-40"
-        style="background-image: url('Images/footer.jpeg')"
-      ></div>
-
-      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
-        <div class="grid grid-cols-1 md:grid-cols-4 gap-12">
-          <!-- Company Info with Logo and Address -->
-          <div>
-            <div class="mb-4">
-              <!-- Replace with your actual logo -->
-              <img src="Images/Logo.png" alt="Terrapure Logo" class="h-24" />
+  <footer class="relative bg-gradient-to-br from-teal-800 to-green-900 text-white pt-16 pb-8">
+    <!-- Top Border Curve -->
+    <div class="absolute top-0 left-0 right-0 h-8 bg-white rounded-b-full"></div>
+    
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
+        <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+            <!-- Company Info with Logo and Address -->
+            <div class="md:col-span-1">
+                <div class="mb-6">
+                    <img src="Images/Logo.png" alt="Terrapure Logo" class="h-20 bg-white p-2 rounded-lg shadow-md" />
+                </div>
+                <p class="text-teal-100 mb-4 text-sm leading-relaxed">
+                    Leading environmental solutions provider specializing in water and wastewater treatment systems for sustainable future.
+                </p>
+                <div class="text-teal-100 text-sm">
+                    <p class="font-semibold mb-2">Office Address:</p>
+                    <a
+                        href="https://maps.google.com/?q=Office+No.+301,+7+Bizz+Sonigara+Business+Complex,+Ravet+BRT+Road,+Pune+412101"
+                        target="_blank"
+                        class="hover:text-white transition-colors block"
+                    >
+                        Office No. 301, 7 Bizz Sonigara Business Complex,<br />
+                        Ravet BRT Road, Pune – 412101,<br />
+                        Maharashtra, India.
+                    </a>
+                </div>
             </div>
-            <p class="mb-4">
-              <a
-                href="https://maps.google.com/?q=Office+No.+301,+7+Bizz+Sonigara+Business+Complex,+Ravet+BRT+Road,+Pune+412101"
-                target="_blank"
-                class="hover:text-green-900 text-blue-800 transition-colors"
-              >
-                Office No. 301, 7 Bizz Sonigara Business Complex,<br />
-                Ravet BRT Road, Pune – 412101,<br />
-                Maharashtra, India.
-              </a>
-            </p>
-          </div>
 
-          <!-- Quick Links -->
-          <div>
-            <h3
-              class="text-xl hover:text-green-900 text-blue-800 font-bold mb-4"
-            >
-              Quick Links
-            </h3>
-            <ul class="space-y-2">
-              <li>
-                <a
-                  href="index.html"
-                  class="hover:text-green-900 text-blue-800 transition-colors"
-                  >Home</a
-                >
-              </li>
-              <li>
-                <a
-                  href="about.html"
-                  class="hover:text-green-900 text-blue-800 transition-colors"
-                  >About Us</a
-                >
-              </li>
-              <li>
-                <a
-                  href="services.html"
-                  class="hover:text-green-900 text-blue-800 transition-colors"
-                  >Services</a
-                >
-              </li>
-              <li>
-                <a
-                  href="projects.html"
-                  class="hover:text-green-900 text-blue-800 transition-colors"
-                  >Projects</a
-                >
-              </li>
-              <li>
-                <a
-                  href="contact.html"
-                  class="hover:text-green-900 text-blue-800 transition-colors"
-                  >Contact</a
-                >
-              </li>
-            </ul>
-          </div>
-
-          <!-- Our Services -->
-          <div>
-            <h3
-              class="text-xl hover:text-green-900 text-blue-800 font-bold mb-4"
-            >
-              Our Services
-            </h3>
-            <ul class="space-y-2">
-              <li>
-                <a
-                  href="services.html#ro"
-                  class="hover:text-green-900 text-blue-800 transition-colors"
-                  >RO Plants</a
-                >
-              </li>
-              <li>
-                <a
-                  href="services.html#stp"
-                  class="hover:text-green-900 text-blue-800 transition-colors"
-                  >Sewage Treatment</a
-                >
-              </li>
-              <li>
-                <a
-                  href="services.html#etp"
-                  class="hover:text-green-900 text-blue-800 transition-colors"
-                  >Effluent Treatment</a
-                >
-              </li>
-              <li>
-                <a
-                  href="services.html#zld"
-                  class="hover:text-green-900 text-blue-800 transition-colors"
-                  >ZLD Systems</a
-                >
-              </li>
-              <li>
-                <a
-                  href="services.html#softeners"
-                  class="hover:text-green-900 text-blue-800 transition-colors"
-                  >Water Softeners</a
-                >
-              </li>
-            </ul>
-          </div>
-
-          <!-- Connect With Us - Phone, Email, Social Media -->
-          <div>
-            <h3
-              class="text-xl hover:text-green-900 text-blue-800 font-bold mb-4"
-            >
-              Connect With Us
-            </h3>
-            <div class="space-y-3">
-              <!-- Phone Numbers -->
-              <div class="flex items-start">
-                <i
-                  class="fas fa-phone hover:text-green-900 text-blue-800 mt-1 mr-3 text-sm"
-                ></i>
-                <div>
-                  <a
-                    href="tel:+919921174727"
-                    class="hover:text-green-900 text-blue-800 transition-colors block"
-                    >+91 9921174727</a
-                  >
-                  <a
-                    href="tel:+917507082185"
-                    class="hover:text-green-900 text-blue-800 transition-colors block"
-                    >+91 7507082185</a
-                  >
-                </div>
-              </div>
-
-              <!-- Email Addresses -->
-              <div class="flex items-start">
-                <i
-                  class="fas fa-envelope hover:text-green-900 text-blue-800 mt-1 mr-3 text-sm"
-                ></i>
-                <div>
-                  <a
-                    href="mailto:enquiry@tpes.in"
-                    class="hover:text-green-900 text-blue-800 transition-colors block"
-                    >enquiry@tpes.in</a
-                  >
-                  <a
-                    href="mailto:info@tpes.in"
-                    class="hover:text-green-900 text-blue-800 transition-colors block"
-                    >info@tpes.in</a
-                  >
-                </div>
-              </div>
-
-              <!-- Social Media Icons -->
-              <div class="pt-2">
-                <div class="flex space-x-4">
-                  <a
-                    href="#"
-                    class="hover:text-green-900 text-blue-800 transition-colors"
-                  >
-                    <i
-                      class="fab hover:text-green-900 text-blue-800 fa-facebook-f text-xl"
-                    ></i>
-                  </a>
-                  <a
-                    href="#"
-                    class="hover:text-green-900 text-blue-800 transition-colors"
-                  >
-                    <i
-                      class="fab hover:text-green-900 text-blue-800 fa-twitter text-xl"
-                    ></i>
-                  </a>
-                  <a
-                    href="#"
-                    class="hover:text-green-900 text-blue-800 transition-colors"
-                  >
-                    <i
-                      class="fab hover:text-green-900 text-blue-800 fa-linkedin-in text-xl"
-                    ></i>
-                  </a>
-                  <a
-                    href="#"
-                    class="hover:text-green-900 text-blue-800 transition-colors"
-                  >
-                    <i
-                      class="fab hover:text-green-900 text-blue-800 fa-instagram text-xl"
-                    ></i>
-                  </a>
-                </div>
-              </div>
+            <!-- Quick Links -->
+            <div>
+                <h3 class="text-lg font-bold mb-6 text-white border-b border-teal-600 pb-2">
+                    Quick Links
+                </h3>
+                <ul class="space-y-3">
+                    <li>
+                        <a
+                            href="index.html"
+                            class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                        >
+                            <i class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"></i>
+                            Home
+                        </a>
+                    </li>
+                    <li>
+                        <a
+                            href="about.html"
+                            class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                        >
+                            <i class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"></i>
+                            About Us
+                        </a>
+                    </li>
+                    <li>
+                        <a
+                            href="services.html"
+                            class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                        >
+                            <i class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"></i>
+                            Services
+                        </a>
+                    </li>
+                    <li>
+                        <a
+                            href="projects.html"
+                            class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                        >
+                            <i class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"></i>
+                            Projects
+                        </a>
+                    </li>
+                    <li>
+                        <a
+                            href="contact.html"
+                            class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                        >
+                            <i class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"></i>
+                            Contact
+                        </a>
+                    </li>
+                </ul>
             </div>
-          </div>
+
+            <!-- Our Services -->
+            <div>
+                <h3 class="text-lg font-bold mb-6 text-white border-b border-teal-600 pb-2">
+                    Our Services
+                </h3>
+                <ul class="space-y-3">
+                    <li>
+                        <a
+                            href="services.html#ro"
+                            class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                        >
+                            <i class="fas fa-tint text-xs mr-2"></i>
+                            RO Plants
+                        </a>
+                    </li>
+                    <li>
+                        <a
+                            href="services.html#stp"
+                            class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                        >
+                            <i class="fas fa-recycle text-xs mr-2"></i>
+                            Sewage Treatment
+                        </a>
+                    </li>
+                    <li>
+                        <a
+                            href="services.html#etp"
+                            class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                        >
+                            <i class="fas fa-industry text-xs mr-2"></i>
+                            Effluent Treatment
+                        </a>
+                    </li>
+                    <li>
+                        <a
+                            href="services.html#zld"
+                            class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                        >
+                            <i class="fas fa-infinity text-xs mr-2"></i>
+                            ZLD Systems
+                        </a>
+                    </li>
+                    <li>
+                        <a
+                            href="services.html#softeners"
+                            class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                        >
+                            <i class="fas fa-filter text-xs mr-2"></i>
+                            Water Softeners
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+            <!-- Connect With Us -->
+            <div>
+                <h3 class="text-lg font-bold mb-6 text-white border-b border-teal-600 pb-2">
+                    Connect With Us
+                </h3>
+                <div class="space-y-4">
+                    <!-- Phone Numbers -->
+                    <div class="flex items-start">
+                        <div class="w-8 h-8 bg-teal-700 rounded-full flex items-center justify-center mr-3 mt-1">
+                            <i class="fas fa-phone text-white text-xs"></i>
+                        </div>
+                        <div>
+                            <a
+                                href="tel:+919921174727"
+                                class="text-teal-100 hover:text-white transition-colors block text-sm font-medium"
+                                >+91 9921174727</a
+                            >
+                            <a
+                                href="tel:+917507082185"
+                                class="text-teal-100 hover:text-white transition-colors block text-sm font-medium"
+                                >+91 7507082185</a
+                            >
+                        </div>
+                    </div>
+
+                    <!-- Email Addresses -->
+                    <div class="flex items-start">
+                        <div class="w-8 h-8 bg-teal-700 rounded-full flex items-center justify-center mr-3 mt-1">
+                            <i class="fas fa-envelope text-white text-xs"></i>
+                        </div>
+                        <div>
+                            <a
+                                href="mailto:enquiry@tpes.in"
+                                class="text-teal-100 hover:text-white transition-colors block text-sm font-medium"
+                                >enquiry@tpes.in</a
+                            >
+                            <a
+                                href="mailto:info@tpes.in"
+                                class="text-teal-100 hover:text-white transition-colors block text-sm font-medium"
+                                >info@tpes.in</a
+                            >
+                        </div>
+                    </div>
+
+                    <!-- Social Media Icons -->
+                    <div class="pt-2">
+                        <p class="text-teal-100 text-sm mb-3">Follow us on:</p>
+                        <div class="flex space-x-3">
+                            <a
+                                href="#"
+                                class="w-10 h-10 bg-teal-700 hover:bg-teal-600 rounded-full flex items-center justify-center transition-colors"
+                                title="Facebook"
+                            >
+                                <i class="fab fa-facebook-f text-white"></i>
+                            </a>
+                            <a
+                                href="#"
+                                class="w-10 h-10 bg-teal-700 hover:bg-teal-600 rounded-full flex items-center justify-center transition-colors"
+                                title="Twitter"
+                            >
+                                <i class="fab fa-twitter text-white"></i>
+                            </a>
+                            <a
+                                href="#"
+                                class="w-10 h-10 bg-teal-700 hover:bg-teal-600 rounded-full flex items-center justify-center transition-colors"
+                                title="LinkedIn"
+                            >
+                                <i class="fab fa-linkedin-in text-white"></i>
+                            </a>
+                            <a
+                                href="#"
+                                class="w-10 h-10 bg-teal-700 hover:bg-teal-600 rounded-full flex items-center justify-center transition-colors"
+                                title="Instagram"
+                            >
+                                <i class="fab fa-instagram text-white"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <div
-          class="border-t border-gray-700 mt-8 hover:text-green-900 text-blue-800 pt-8 text-center"
-        >
-          <p>
-            &copy; 2025 Terrapure Environment Services Pvt. Ltd. All rights
-            reserved.
-          </p>
+        <!-- Bottom Section -->
+        <div class="border-t border-teal-700 mt-12 pt-8">
+            <div class="flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0">
+                <div class="text-teal-200 text-sm text-center md:text-left">
+                    <p>&copy; 2025 Terrapure Environment Services Pvt. Ltd. All rights reserved.</p>
+                </div>
+                <div class="flex space-x-6 text-sm text-teal-200">
+                    <a href="#" class="hover:text-white transition-colors">Privacy Policy</a>
+                    <a href="#" class="hover:text-white transition-colors">Terms of Service</a>
+                    <a href="#" class="hover:text-white transition-colors">Sitemap</a>
+                </div>
+            </div>
         </div>
-      </div>
-    </footer>
+    </div>
+</footer>
 
     <script src="script.js"></script>
    
