internal pages added

--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
     </div>
 
     <!-- Navigation -->
-    <nav
+     <nav
       class="backdrop-blur-md bg-white/70 shadow-md w-full border-b border-teal-200 relative z-50"
     >
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -168,6 +168,33 @@
                     href="services.html#softeners"
                     class="block px-4 py-2 text-sm text-teal-900 hover:bg-teal-50 hover:text-teal-700 transition-colors"
                     >Water Softeners</a
+                  >
+                  <!-- New services -->
+                  <a
+                    href="services.html#wtp-manufacturer"
+                    class="block px-4 py-2 text-sm text-teal-900 hover:bg-teal-50 hover:text-teal-700 transition-colors"
+                    >Water Treatment Plant Manufacturer</a
+                  >
+
+                  <a
+                    href="services.html#wwtp"
+                    class="block px-4 py-2 text-sm text-teal-900 hover:bg-teal-50 hover:text-teal-700 transition-colors"
+                    >Water Treatment Plant</a
+                  >
+                  <a
+                    href="services.html#dm"
+                    class="block px-4 py-2 text-sm text-teal-900 hover:bg-teal-50 hover:text-teal-700 transition-colors"
+                    >Demineralization Plant (DM)</a
+                  >
+                  <a
+                    href="services.html#om"
+                    class="block px-4 py-2 text-sm text-teal-900 hover:bg-teal-50 hover:text-teal-700 transition-colors"
+                    >Operation & Maintenance</a
+                  >
+                  <a
+                    href="services.html#amc"
+                    class="block px-4 py-2 text-sm text-teal-900 hover:bg-teal-50 hover:text-teal-700 transition-colors"
+                    >AMC</a
                   >
                 </div>
               </div>
@@ -260,6 +287,33 @@
                 class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50"
                 >Water Softeners</a
               >
+              <!-- New services -->
+              <a
+                href="services.html#wtp-manufacturer"
+                class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50"
+                >Water Treatment Plant Manufacturer</a
+              >
+
+              <a
+                href="services.html#wwtp"
+                class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50"
+                >Water Treatment Plant</a
+              >
+              <a
+                href="services.html#dm"
+                class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50"
+                >Demineralization Plant (DM)</a
+              >
+              <a
+                href="services.html#om"
+                class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50"
+                >Operation & Maintenance</a
+              >
+              <a
+                href="services.html#amc"
+                class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50"
+                >AMC</a
+              >
             </div>
           </div>
 
@@ -276,7 +330,6 @@
         </div>
       </div>
     </nav>
-
     <!-- Hero Section -->
     <section class="hero-gradient py-20 text-white">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -568,13 +621,13 @@
                             Services
                         </a>
                     </li>
-                    <li>
+                     <li>
                         <a
-                            href="projects.html"
+                            href="career.html"
                             class="text-teal-100 hover:text-white transition-colors flex items-center group"
                         >
                             <i class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"></i>
-                            Projects
+                            Career
                         </a>
                     </li>
                     <li>
