update the navbar and 3 internal pages

--- a/index.html
+++ b/index.html
@@ -103,15 +103,13 @@
                   class="block px-4 py-2 text-sm text-teal-900 hover:bg-teal-50 hover:text-teal-700 transition-colors">Water
                   Softeners</a>
                 <!-- New services -->
-                <a href="services.html#wtp-manufacturer"
+             <a href="WTP.html"
                   class="block px-4 py-2 text-sm text-teal-900 hover:bg-teal-50 hover:text-teal-700 transition-colors">Water
-                  Treatment Plant Manufacturer</a>
+                  Treatment Plant</a>
                 <a href="wastewater-treatment.html"
                   class="block px-4 py-2 text-sm text-teal-900 hover:bg-teal-50 hover:text-teal-700 transition-colors">Wastewater
                   Treatment Plant</a>
-                <a href="WTP.html"
-                  class="block px-4 py-2 text-sm text-teal-900 hover:bg-teal-50 hover:text-teal-700 transition-colors">Water
-                  Treatment Plant</a>
+              
                 <a href="demineralization-plants(DM).html"
                   class="block px-4 py-2 text-sm text-teal-900 hover:bg-teal-50 hover:text-teal-700 transition-colors">Demineralization
                   Plant (DM)</a>
@@ -159,36 +157,36 @@
             <i class="fas fa-chevron-down text-xs transition-transform duration-300" id="services-arrow"></i>
           </button>
           <div id="mobile-services-menu" class="hidden pl-6 space-y-2 mt-2 border-l-2 border-teal-200 ml-3">
-            <a href="services.html#ro"
+            <a href="RO.html"
               class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50">RO
               Plants</a>
             <a href="sewage.html"
               class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50">Sewage
               Treatment</a>
-            <a href="services.html#etp"
+            <a href="ETP.html"
               class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50">Effluent
               Treatment</a>
-            <a href="services.html#zld"
+            <a href="ZLD.html"
               class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50">ZLD
               Systems</a>
-            <a href="services.html#softeners"
+            <a href="water-softener-plant.html"
               class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50">Water
               Softeners</a>
             <!-- New services -->
-            <a href="services.html#wtp-manufacturer"
+            <a href="WTP.html"
               class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50">Water
               Treatment Plant Manufacturer</a>
 
-            <a href="services.html#wwtp"
+            <a href="wastewater-treatment.html"
               class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50">Water
               Treatment Plant</a>
-            <a href="services.html#dm"
+            <a href="demineralization-plants(DM).html"
               class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50">Demineralization
               Plant (DM)</a>
-            <a href="services.html#om"
+            <a href="operation & maintenance.html"
               class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50">Operation
               & Maintenance</a>
-            <a href="services.html#amc"
+            <a href="AMC.html"
               class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50">AMC</a>
           </div>
         </div>
@@ -1486,12 +1484,12 @@
                 About Us
               </a>
             </li>
-            <li>
+            <!-- <li>
               <a href="services.html" class="text-teal-100 hover:text-white transition-colors flex items-center group">
                 <i class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"></i>
                 Services
               </a>
-            </li>
+            </li> -->
             <li>
               <a href="career.html" class="text-teal-100 hover:text-white transition-colors flex items-center group">
                 <i class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"></i>
