--- a/AMC.html
+++ b/AMC.html
@@ -46,80 +46,144 @@
     </div>
 
     <!-- Main Navigation -->
-    <nav class="backdrop-blur-md bg-white/70 shadow-md w-full border-b border-teal-200 relative z-50">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex justify-between h-16 items-center">
-                <!-- Logo -->
-                <div class="flex items-center">
-                    <a href="index.html" class="flex-shrink-0 flex items-center ml-4">
-                        <img src="Images/Logo.png" alt="Terrapure Logo" class="h-16 mt-2 w-auto mr-2 rounded-md" />
-                    </a>
-                </div>
-
-                <!-- Desktop Menu -->
-                <div class="hidden md:flex items-center space-x-6">
-                    <a href="index.html" class="text-teal-900 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors">Home</a>
-                    <a href="about.html" class="text-teal-900 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors">About</a>
-
-                    <!-- Services Dropdown -->
-                    <div class="relative group">
-                        <button class="text-teal-900 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors flex items-center">
-                            Services
-                            <i class="fas fa-chevron-down ml-1 text-xs"></i>
-                        </button>
-                        <div class="absolute left-0 top-full mt-0 w-56 bg-white/95 backdrop-blur-md rounded-md shadow-lg opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-300 z-50 border border-teal-100 transform translate-y-2 group-hover:translate-y-0">
-                            <div class="py-2">
-                                <a href="services.html#ro" class="block px-4 py-2 text-sm text-teal-900 hover:bg-teal-50 hover:text-teal-700 transition-colors">RO Plants</a>
-                                <a href="services.html#stp" class="block px-4 py-2 text-sm text-teal-900 hover:bg-teal-50 hover:text-teal-700 transition-colors">Sewage Treatment</a>
-                                <a href="services.html#etp" class="block px-4 py-2 text-sm text-teal-900 hover:bg-teal-50 hover:text-teal-700 transition-colors">Effluent Treatment</a>
-                                <a href="services.html#zld" class="block px-4 py-2 text-sm text-teal-900 hover:bg-teal-50 hover:text-teal-700 transition-colors">ZLD Systems</a>
-                                <a href="services.html#softeners" class="block px-4 py-2 text-sm text-teal-900 hover:bg-teal-50 hover:text-teal-700 transition-colors">Water Softeners</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <a href="career.html" class="text-teal-900 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors">Career</a>
-                    <a href="contact.html" class="bg-gradient-to-r from-teal-500 to-green-400 text-white px-5 py-2 rounded-full text-sm font-medium hover:from-teal-600 hover:to-green-500 shadow-md transition-all">Contact</a>
-                </div>
-
-                <!-- Mobile Menu Button -->
-                <div class="md:hidden flex items-center">
-                    <button id="mobile-menu-button" class="text-teal-800 hover:bg-teal-100 p-2 rounded-md transition">
-                        <!-- Hamburger Icon (visible by default) -->
-                        <i id="hamburger-icon" class="fas fa-bars text-2xl"></i>
-                        <!-- Cross Icon (hidden by default) -->
-                        <i id="cross-icon" class="fas fa-times text-2xl hidden"></i>
-                    </button>
-                </div>
-            </div>
+<nav class="backdrop-blur-md bg-white/70 shadow-md w-full border-b border-teal-200 relative z-50">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+      <div class="flex justify-between h-16 items-center">
+        <!-- Logo -->
+        <div class="flex items-center">
+          <a href="index.html" class="flex-shrink-0 flex items-center ml-4">
+            <img src="Images/Logo.png" alt="Terrapure Logo" class="h-16 mt-2 w-auto mr-2 rounded-md" />
+          </a>
         </div>
 
-        <!-- Mobile Menu -->
-        <div id="mobile-menu" class="md:hidden hidden absolute top-full left-0 right-0 z-50">
-            <div class="px-4 pt-4 pb-6 space-y-2 bg-white/95 backdrop-blur-md shadow-md rounded-b-lg relative border-t border-teal-100">
-                <a href="index.html" class="block text-teal-900 hover:text-teal-600 px-3 py-2 text-base font-medium transition-colors rounded-md hover:bg-teal-50">Home</a>
-                <a href="about.html" class="block text-teal-900 hover:text-teal-600 px-3 py-2 text-base font-medium transition-colors rounded-md hover:bg-teal-50">About</a>
+        <!-- Desktop Menu -->
+        <div class="hidden md:flex items-center space-x-6">
+          <a href="index.html"
+            class="text-teal-900 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors">Home</a>
+          <a href="about.html"
+            class="text-teal-900 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors">About</a>
 
-                <!-- Mobile Services Dropdown -->
-                <div class="pt-2">
-                    <button id="mobile-services-toggle" class="w-full text-left text-teal-900 hover:text-teal-600 px-3 py-2 text-base font-medium transition-colors flex justify-between items-center rounded-md hover:bg-teal-50">
-                        <span>Services</span>
-                        <i class="fas fa-chevron-down text-xs transition-transform duration-300" id="services-arrow"></i>
-                    </button>
-                    <div id="mobile-services-menu" class="hidden pl-6 space-y-2 mt-2 border-l-2 border-teal-200 ml-3">
-                        <a href="services.html#ro" class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50">RO Plants</a>
-                        <a href="services.html#stp" class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50">Sewage Treatment</a>
-                        <a href="services.html#etp" class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50">Effluent Treatment</a>
-                        <a href="services.html#zld" class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50">ZLD Systems</a>
-                        <a href="services.html#softeners" class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50">Water Softeners</a>
-                    </div>
-                </div>
-
-                <a href="career.html" class="block text-teal-900 hover:text-teal-600 px-3 py-2 text-base font-medium transition-colors rounded-md hover:bg-teal-50">Career</a>
-                <a href="contact.html" class="block bg-gradient-to-r from-teal-500 to-green-400 text-white px-3 py-2 rounded-md text-base font-medium shadow-md text-center hover:from-teal-600 hover:to-green-500 transition-all mt-4">Contact</a>
+          <!-- Services Dropdown -->
+          <div class="relative group">
+            <button
+              class="text-teal-900 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors flex items-center">
+              Services
+              <i class="fas fa-chevron-down ml-1 text-xs"></i>
+            </button>
+            <div
+              class="absolute left-0 top-full mt-0 w-56 bg-white/95 backdrop-blur-md rounded-md shadow-lg opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-300 z-50 border border-teal-100 transform translate-y-2 group-hover:translate-y-0">
+              <div class="py-2">
+                <a href="RO.html"
+                  class="block px-4 py-2 text-sm text-teal-900 hover:bg-teal-50 hover:text-teal-700 transition-colors">RO
+                  Plants</a>
+                <a href="sewage.html"
+                  class="block px-4 py-2 text-sm text-teal-900 hover:bg-teal-50 hover:text-teal-700 transition-colors">Sewage
+                  Treatment</a>
+                <a href="ETP.html"
+                  class="block px-4 py-2 text-sm text-teal-900 hover:bg-teal-50 hover:text-teal-700 transition-colors">Effluent
+                  Treatment</a>
+                <a href="ZLD.html"
+                  class="block px-4 py-2 text-sm text-teal-900 hover:bg-teal-50 hover:text-teal-700 transition-colors">ZLD
+                  Systems</a>
+                <a href="water-softener-plant.html"
+                  class="block px-4 py-2 text-sm text-teal-900 hover:bg-teal-50 hover:text-teal-700 transition-colors">Water
+                  Softeners</a>
+                <!-- New services -->
+             <a href="WTP.html"
+                  class="block px-4 py-2 text-sm text-teal-900 hover:bg-teal-50 hover:text-teal-700 transition-colors">Water
+                  Treatment Plant</a>
+                <a href="wastewater-treatment.html"
+                  class="block px-4 py-2 text-sm text-teal-900 hover:bg-teal-50 hover:text-teal-700 transition-colors">Wastewater
+                  Treatment Plant</a>
+              
+                <a href="demineralization-plants(DM).html"
+                  class="block px-4 py-2 text-sm text-teal-900 hover:bg-teal-50 hover:text-teal-700 transition-colors">Demineralization
+                  Plant (DM)</a>
+                <a href="operation & maintenance.html"
+                  class="block px-4 py-2 text-sm text-teal-900 hover:bg-teal-50 hover:text-teal-700 transition-colors">Operation
+                  & Maintenance</a>
+                <a href="AMC.html"
+                  class="block px-4 py-2 text-sm text-teal-900 hover:bg-teal-50 hover:text-teal-700 transition-colors">AMC</a>
+              </div>
             </div>
+          </div>
+
+          <a href="career.html"
+            class="text-teal-900 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors">Career</a>
+          <a href="contact.html"
+            class="bg-gradient-to-r from-teal-500 to-green-400 text-white px-5 py-2 rounded-full text-sm font-medium hover:from-teal-600 hover:to-green-500 shadow-md transition-all">Contact</a>
         </div>
-    </nav>
+
+        <!-- Mobile Menu Button -->
+        <div class="md:hidden flex items-center">
+          <button id="mobile-menu-button" class="text-teal-800 hover:bg-teal-100 p-2 rounded-md transition">
+            <!-- Hamburger Icon (visible by default) -->
+            <i id="hamburger-icon" class="fas fa-bars text-2xl"></i>
+            <!-- Cross Icon (hidden by default) -->
+            <i id="cross-icon" class="fas fa-times text-2xl hidden"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Mobile Menu -->
+    <div id="mobile-menu" class="md:hidden hidden absolute top-full left-0 right-0 z-50">
+      <div
+        class="px-4 pt-4 pb-6 space-y-2 bg-white/95 backdrop-blur-md shadow-md rounded-b-lg relative border-t border-teal-100">
+        <a href="index.html"
+          class="block text-teal-900 hover:text-teal-600 px-3 py-2 text-base font-medium transition-colors rounded-md hover:bg-teal-50">Home</a>
+        <a href="about.html"
+          class="block text-teal-900 hover:text-teal-600 px-3 py-2 text-base font-medium transition-colors rounded-md hover:bg-teal-50">About</a>
+
+        <!-- Mobile Services Dropdown -->
+        <div class="pt-2">
+          <button id="mobile-services-toggle"
+            class="w-full text-left text-teal-900 hover:text-teal-600 px-3 py-2 text-base font-medium transition-colors flex justify-between items-center rounded-md hover:bg-teal-50">
+            <span>Services</span>
+            <i class="fas fa-chevron-down text-xs transition-transform duration-300" id="services-arrow"></i>
+          </button>
+          <div id="mobile-services-menu" class="hidden pl-6 space-y-2 mt-2 border-l-2 border-teal-200 ml-3">
+            <a href="RO.html"
+              class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50">RO
+              Plants</a>
+            <a href="sewage.html"
+              class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50">Sewage
+              Treatment</a>
+            <a href="ETP.html"
+              class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50">Effluent
+              Treatment</a>
+            <a href="ZLD.html"
+              class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50">ZLD
+              Systems</a>
+            <a href="water-softener-plant.html"
+              class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50">Water
+              Softeners</a>
+            <!-- New services -->
+            <a href="WTP.html"
+              class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50">Water
+              Treatment Plant Manufacturer</a>
+
+            <a href="wastewater-treatment.html"
+              class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50">Water
+              Treatment Plant</a>
+            <a href="demineralization-plants(DM).html"
+              class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50">Demineralization
+              Plant (DM)</a>
+            <a href="operation & maintenance.html"
+              class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50">Operation
+              & Maintenance</a>
+            <a href="AMC.html"
+              class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50">AMC</a>
+          </div>
+        </div>
+
+        <a href="career.html"
+          class="block text-teal-900 hover:text-teal-600 px-3 py-2 text-base font-medium transition-colors rounded-md hover:bg-teal-50">Career</a>
+        <a href="contact.html"
+          class="block bg-gradient-to-r from-teal-500 to-green-400 text-white px-3 py-2 rounded-md text-base font-medium shadow-md text-center hover:from-teal-600 hover:to-green-500 transition-all mt-4">Contact</a>
+      </div>
+    </div>
+  </nav>
 
     <!-- Banner for Annual Maintenance Contract -->
     <section class="relative h-96 bg-cover bg-center bg-no-repeat" style="background-image: url('');">
