updated mobile navbar of all pages

--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
     </div>
 
     <!-- ✅ Main Navigation -->
-    <nav
+       <nav
       class="backdrop-blur-md bg-white/70 shadow-md w-full border-b border-teal-200 relative z-50"
     >
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -287,13 +287,13 @@
               <a
                 href="WTP.html"
                 class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50"
-                >Water Treatment Plant Manufacturer</a
+                >Water Treatment Plant </a
               >
 
               <a
                 href="wastewater-treatment.html"
                 class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50"
-                >Water Treatment Plant</a
+                > Waste Water Treatment Plant</a
               >
               <a
                 href="demineralization-plants(DM).html"
