--- a/index.html
+++ b/index.html
@@ -176,11 +176,13 @@
     </div>
 
     <!-- ✅ Main Navigation -->
-    <nav
+      <nav
       class="backdrop-blur-md bg-white/70 shadow-md w-full border-b border-teal-200 relative z-50"
     >
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between h-20 items-center">
+          <!-- increased height -->
+
           <!-- Logo -->
           <div class="flex items-center">
             <a href="index.html" class="flex-shrink-0 flex items-center ml-4">
@@ -194,6 +196,7 @@
 
           <!-- Desktop Menu -->
           <div class="hidden md:flex items-center space-x-8">
+            <!-- wider spacing -->
             <a
               href="index.html"
               class="text-teal-900 hover:text-teal-600 px-3 py-3 text-base font-medium transition-colors"
@@ -291,7 +294,9 @@
               id="mobile-menu-button"
               class="text-teal-800 hover:bg-teal-100 p-2 rounded-md transition"
             >
+              <!-- Hamburger Icon -->
               <i id="hamburger-icon" class="fas fa-bars text-3xl"></i>
+              <!-- Cross Icon -->
               <i id="cross-icon" class="fas fa-times text-3xl hidden"></i>
             </button>
           </div>
@@ -358,16 +363,17 @@
                 class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50"
                 >Water Softeners</a
               >
+              <!-- New services -->
               <a
                 href="WTP.html"
                 class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50"
-                >Water Treatment Plant Manufacturer</a
+                >Water Treatment Plant </a
               >
 
               <a
                 href="wastewater-treatment.html"
                 class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50"
-                >Water Treatment Plant</a
+                > Waste Water Treatment Plant</a
               >
               <a
                 href="demineralization-plants(DM).html"
