--- a/sewage.html
+++ b/sewage.html
@@ -448,13 +448,13 @@
               <a
                 href="WTP.html"
                 class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50"
-                >Water Treatment Plant Manufacturer</a
+                >Water Treatment Plant </a
               >
 
               <a
                 href="wastewater-treatment.html"
                 class="block text-teal-700 hover:text-teal-600 px-3 py-2 text-sm font-medium transition-colors rounded-md hover:bg-teal-50"
-                >Water Treatment Plant</a
+                > Waste Water Treatment Plant</a
               >
               <a
                 href="demineralization-plants(DM).html"
